fix: alignment of elements in a comment

--- a/app/assets/stylesheets/commontator.scss
+++ b/app/assets/stylesheets/commontator.scss
@@ -30,7 +30,6 @@
 
 .votes {
   display: inline-block;
-  margin-top: 20px;
   width: 60px;
 }
 
